# box-with-molecules

./: .gitignore  .gitlab-ci.yml  Box.h  CMakeLists.txt  Dockerfile  GraphicsComponent.h  Particle.h  README-en.md  README.md  Simulation.h  Vector.h
data/: data_rare.txt  research.py  vpv_2.0.ipynb
forms/: MainWidget.ui  mainwidget.ui
images/: Class Diagram.vpd  Use Cases Diagram.vpd  UseCases Diagram.vpd
include/: Box.h  GraphicsComponent.h  MainWidget.h  Particle.h  ParticleImage.h  Simulation.h  Vector.h  constants.h
includes/: Particle.h  Vector.h
src/: Box.cpp  GraphicsComponent.cpp  MainWidget.cpp  Particle.cpp  ParticleImage.cpp  Simulation.cpp  Vector.cpp  main.cpp
tests/: box_test.cpp
